// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs


Table users {
  id SERIAL4 [primary key]
  login varchar
  email varchar
  password varchar
}

Table assets {
  id SERIAL4 [primary key]
  title varchar
  description varchar
  release_datetime timestampz
  company_id integer
  interest double
}

Table prices {
  id SERIAL4 [primary key]
  asset_id integer
  price integer
  set_datetime timestampz
}

Table users_assets {
  user_id integer
  asset_id integer
}

Table companies {
  id SERIAL4 [primary key]
  title varchar
  description varchar
  foundation_datetime timestampz
  revenue bigint
  profit bigint
  staff integer
}

Table risks {
  id SERIAL4 [primary key]
  description varchar
}

Table portfolios {
  id SERIAL4 [primary key]
  user_id integer
  create_datetime timestampz
  risk_id integer
  amount integer

}

Table portfolios_assets {
  portfolio_id integer
  asset_id integer
  count integer
}

Ref: "assets"."id" < "prices"."asset_id"

Ref: "users"."id" < "users_assets"."user_id"

Ref: "assets"."id" < "users_assets"."asset_id"

Ref: "companies"."id" < "assets"."company_id"

Ref: "risks"."id" < "portfolios"."risk_id"

Ref: "portfolios"."id" < "portfolios_assets"."portfolio_id"

Ref: "assets"."id" < "portfolios_assets"."asset_id"

Ref: "users"."id" < "portfolios"."user_id"